<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_gz_example_application</name>
  <version>0.0.0</version>
  <description>Application-specific implementations for the ros_gz_project example</description>
  <maintainer email="carlos.afv95@gmail.com">Carlos Fierro</maintainer>
  <license>Apache 2.0</license>
  <author>Carlos Fierrp</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <!--depend>std_msgs</depend-->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
